--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:unit": "vitest run",
+    "preview:ci": "cross-env VITE_ENABLE_MSW=true vite preview --host 0.0.0.0 --port 4173",
+    "cypress:run": "cypress run --browser electron --headless",
+    "test:e2e": "npm run build && start-server-and-test preview:ci http://127.0.0.1:4173 cypress:run"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -24,18 +30,26 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@faker-js/faker": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^13.15.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jsdom": "^27.2.0",
     "msw": "^2.12.1",
+    "start-server-and-test": "^2.0.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vitest": "^2.1.4"
   },
   "msw": {
     "workerDirectory": [
